<resources>
    <string name="app_name">NopStation Cart</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_price">$12,345.00</string>
    <string name="placeholder_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown</string>
    <string name="title_home_page">Home</string>
    <string name="title_product">Product</string>
    <string name="title_category">Categories</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_scan_barcode">Scan Barcode</string>
    <string name="title_customer_info">My Account</string>
    <string name="title_orders">Orders</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_search">Search Products</string>
    <string name="title_more">More</string>
    <string name="title_settings">Settings</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_wishlist">Wish List</string>
    <string name="title_addresses">Addresses</string>
    <string name="title_about_us">About Us</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_my_addresses">My Addresses</string>
    <string name="title_my_reviews">My Reviews</string>
    <string name="title_Add_review">Add Review</string>
    <string name="title_reviews">Product Review</string>
    <string name="title_reward_points">Reward Points</string>
    <string name="home_nav_home">Home</string>
    <string name="home_nav_categories">Categories</string>
    <string name="home_nav_search">Search</string>
    <string name="home_nav_more">More</string>
    <string name="home_nav_account">Account</string>
    <string name="place_barcode_in_camera">Put barcode here to Scan instantly</string>
    <string name="invalid_barcode">Invalid Product code </string>
    <string name="login_password">Password</string>
    <string name="login_usrname">Username or Email</string>
    <string name="login">Login</string>
    <string name="login_new_customer">New Customer?</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_tv_or">Or</string>
    <string name="username_password_not_match">Username and password didn\'t match</string>
    <string name="username_password_require">Username and password are required</string>
    <string name="login_successful">Login successful</string>
    <string name="email_permission_require">Email permission is required.</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="log_out">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reg_title_your_personal_details">Personal Details</string>
    <string name="reg_title_company_details">Company Details</string>
    <string name="reg_title_options">Options</string>
    <string name="reg_title_your_password">Password</string>
    <string name="reg_btn_register">Register</string>
    <string name="reg_hint_first_name">First name:</string>
    <string name="reg_hint_last_name">Last name:</string>
    <string name="reg_hint_dd_mm_yy">Date of Birth</string>
    <string name="reg_hint_email">Email</string>
    <string name="reg_hint_phone">Phone</string>
    <string name="reg_gender">Gender:</string>
    <string name="male">"Male"</string>
    <string name="female">"Female"</string>
    <string name="newsletter">"Newsletter"</string>
    <string name="reg_hint_company_name">Company name</string>
    <string name="reg_hint_password">Password</string>
    <string name="reg_hint_confirm_password">Confirm password</string>
    <string name="reg_hint_is_required"> Is Required</string>
    <string name="save">Save</string>
    <string name="reg_hint_username">Username:</string>
    <string name="reg_hint_fax">Fax</string>
    <string name="reg_hint_street_address">Street Address:</string>
    <string name="reg_hint_street_address2">Street Address 2:</string>
    <string name="reg_hint_zip_or_postal_code">Zip Or PostalCode:</string>
    <string name="reg_hint_country">Country:</string>
    <string name="reg_hint_city">City:</string>
    <string name="reg_hint_state">State:</string>
    <string name="register_new">Register</string>
    <string name="fill_required_fields">Please fill all required fields</string>
    <string name="register">Register</string>
    <string name="cart_total_item">%s item</string>
    <string name="cart_enter_your_coupon_here">Enter your coupon</string>
    <string name="cart_apply_coupon">Apply Coupon</string>
    <string name="cart_enter_gift_card_code">Enter Gift Card code</string>
    <string name="cart_add_gift_card">Add Gift Card</string>
    <string name="cart_proceed_to_checkout">Proceed to checkout</string>
    <string name="sub_total">Sub-Total</string>
    <string name="shipping">Shipping</string>
    <string name="discount">Discount</string>
    <string name="entered_code">Entered Coupon Code -</string>
    <string name="tax">Tax</string>
    <string name="you_will_earn">You will earn</string>
    <string name="gift_card">Gift Card</string>
    <string name="total">Total</string>
    <string name="cart_empty">Cart Is Empty</string>
    <string name="cart_items_count">%d Items</string>
    <string name="calculated_during_checkout">Calculated During Checkout</string>
    <string name="succcessfully_added_to_wishlist">Successfully added to wish list</string>
    <string name="checkout_msg_long">By creating an account on our website, you will be able to shop faster, be up to date on an orders status, and keep track of the orders you have previously made.</string>
    <string name="checkout_msg_short">Register and save time</string>
    <string name="returning_customer">Returning Customer?</string>
    <string name="checkout_title">Checkout as a Guest or Register</string>
    <string name="checkout_as_guest">Checkout as Guest</string>
    <string name="new_address">New Address</string>
    <string name="address">Address</string>
    <string name="step_shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="text_continue">Continue</string>
    <string name="city">City</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="zip_code">Zip Code</string>
    <string name="fax">Fax</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="store_pick_up">Store/Pickup</string>
    <string name="store">Store</string>
    <string name="confirm">Confirm</string>
    <string name="products">Products</string>
    <string name="pickup_point_address">Pickup point address</string>
    <string name="invoice">Order Calculation</string>
    <string name="please_complete_previous_step">Please complete previous step</string>
    <string name="order_number_is">Order Number is</string>
    <string name="your_order_is_confirm">Your Order is Confirmed</string>
    <string name="ok">OK</string>
    <string name="quantity">Quantity</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="see_all">See All</string>
    <string name="featured_products">Featured Products</string>
    <string name="availability">Availability</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_wishlist">Add To WishList</string>
    <string name="add_to_cart_plus">+ Add To Cart</string>
    <string name="buy_now">Buy Now!</string>
    <string name="size">Size</string>
    <string name="select_size">Select your size</string>
    <string name="color">Color</string>
    <string name="select_color">Select your color</string>
    <string name="done">Done</string>
    <string name="select">Select</string>
    <string name="featured_manufacturer">Featured Manufacturers</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="email_address">Email Address</string>
    <string name="send">Send</string>
    <string name="back_button_click_msg">Press again to exit</string>
    <string name="best_selling">Best Selling</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="scan_barcode">@string/title_scan_barcode</string>
    <string name="test_your_api">Your nopCommerce URL</string>
    <string name="test">Test</string>
    <string name="set_default">Set default URL</string>
    <string name="sample_base_url">Ex: http://app.nop-station.com</string>
    <string name="select_language">Select Language</string>
    <string name="select_currency">Select Currency</string>
    <string name="select_theme">Dark Theme</string>
    <string name="change_language">Change Language</string>
    <string name="change_currency">Change Currency</string>
    <string name="language">Language</string>
    <string name="url_is_required">Url is Required</string>
    <string-array name="spinner_dummy_data">
        <item>Dummy Spinner Item</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
    <string name="search_limit">Search term minimum length is 3 characters</string>
    <string name="facebook_app_id">207124103908002</string>
    <string name="fb_login_protocol_scheme">207124103908002</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="filter_by_price">Filter By Price</string>
    <string name="filter_by_attr">Filter By %s</string>
    <string name="currently_shopping_by">Currently Shopping By</string>
    <string name="remove_filter">Remove Filter</string>
    <string name="no_product_found">No Product Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="order_number">Order Number:\u0020</string>
    <string name="order_date">Order Date:\u0020</string>
    <string name="order_total">Order Total:\u0020</string>
    <string name="order_status">Order Status:\u0020</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_details">Order Details</string>
    <string name="price">Price</string>
    <string name="remaining">remaining</string>
    <string name="description">Description</string>
    <string name="related_products">Related Products</string>
    <string name="people_also_purchase">People Also Purchase</string>
    <string name="add_all_items_to_cart">Add All Items to Cart</string>
    <string name="adding_to_wish_list">Adding to WishList…</string>
    <string name="please_wait">Please Wait…</string>
    <string name="remove">Remove</string>
    <string name="invalid_id">Invalid ID</string>
    <string name="no_items_in_your_wishlist">No Items in Your Wish List</string>
    <string name="no_reward_points">There is no balance history yet</string>
    <string name="submit">Submit</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_enquiry">Your Enquiry</string>
    <string name="hint_recipient_name">Recipient\'s Name</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_message">Message</string>
</resources>