<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/app_bottom_icon_home"
        android:title="@string/home_nav_home"/>

    <item
        android:id="@+id/bottom_nav_categories"
        android:icon="@drawable/app_bottom_icon_categories"
        android:title="@string/home_nav_categories"/>

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/app_bottom_icon_search"
        android:title="@string/home_nav_search"/>

    <item
        android:id="@+id/bottom_nav_account"
        android:icon="@drawable/app_bottom_icon_account"
        android:title="@string/home_nav_account"/>

    <item
        android:id="@+id/bottom_nav_more"
        android:icon="@drawable/app_bottom_icon_more"
        android:title="@string/home_nav_more" />

</menu>
