<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etRecipientName"
        style="@style/RoundedEditText"
        android:hint="@string/hint_recipient_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etYourName"
        style="@style/RoundedEditText"
        android:hint="@string/hint_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etMessage"
        style="@style/RoundedEditText"
        android:hint="@string/hint_message"
        android:inputType="textShortMessage"
        android:imeOptions="actionDone"/>

</LinearLayout>