<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_quantity"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:background="@drawable/rect_bg_with_border"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:background="@color/darkOrGray"
        android:text="@string/text_minus"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:text="2"
        android:textColor="?attr/primaryTextColor"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:gravity="center" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:background="@color/darkOrGray"
        android:contentDescription="@string/placeholder"
        android:text="@string/text_plus"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp" />

</LinearLayout>
