<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/fragmentBackGroundColor"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themePrimary"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="8dp"
            android:paddingEnd="5dp"
            android:paddingBottom="8dp"
            android:weightSum="100">

            <TextView
                android:id="@+id/checkoutAsGuestOrRegisterTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="85"
                android:gravity="start"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/checkout_title"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/ic_cross"
                android:tint="@color/white" />

        </LinearLayout>


        <TextView
            android:id="@+id/registerAndSaveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/checkout_msg_short"
            android:textColor="?attr/primaryTextColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/byCreatingAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/checkout_msg_long"
            android:textColor="?attr/primaryTextColor" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGuestCheckout"
                style="@style/RoundedButtonRegular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slim_btn_height"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="#313437"
                android:maxLines="1"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/checkout_as_guest"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/RoundedButtonRegular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slim_btn_height"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="#313437"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/returningCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:padding="5dp"
                android:text="@string/returning_customer"
                android:textColor="?attr/primaryTextColor"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/slim_btn_height"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/RoundedButtonRegular"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>