<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/currently_shopping_by"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/tv_text_size_semi_large"
        android:textStyle="bold" />

    <include layout="@layout/horizontal_divider" />

    <TextView
        android:id="@+id/tvAppliedAttributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/custom_radio_button"
        android:checked="true"
        android:padding="5dp"
        android:textColor="?attr/primaryTextColor"
        android:textSize="@dimen/tv_text_size_regular"
        android:visibility="visible"
        tools:text="@string/placeholder" />

    <TextView
        android:id="@+id/btnClearFilter"
        style="@style/RoundedButtonTiny_1"
        android:text="@string/remove_filter" />

</LinearLayout>