<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragmentBackGroundColor"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuantityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            tools:text="@string/quantity"
            android:textColor="?attr/primaryTextColor"
            android:textSize="@dimen/tv_text_size_regular"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="1"
            tools:text="@string/select_quantity"
            android:textColor="@color/gray"
            android:textSize="@dimen/tv_text_size_small" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="@dimen/tv_text_size_regular"
        tools:text="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/slim_btn_height"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/darkOrGray"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkOrGray"
                    android:textSize="18sp"
                    android:text="@string/text_minus"
                    android:textColor="?attr/primaryTextColor" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/blackOrWhite" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@color/darkOrGray"
                    android:contentDescription="@string/placeholder"
                    android:text="@string/text_plus"
                    android:textSize="18sp"
                    android:textColor="?attr/primaryTextColor" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>